[gd_scene load_steps=7 format=3 uid="uid://ctjta82x1dlvp"]

[ext_resource type="Script" path="res://scene/instruction/Operation/XorInstruction.gd" id="1_6420q"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_gu6lb"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_18een"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_jqq2l"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_oujt6"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_utlk4"]

[node name="XorInstruction" type="Panel"]
script = ExtResource("1_6420q")

[node name="BaseRow" parent="." instance=ExtResource("2_gu6lb")]

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_18een")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Xor"
script = ExtResource("4_jqq2l")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_oujt6")]

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_utlk4")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_utlk4")]

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "xor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput3" parent="BaseRow/BaseLineColor" instance=ExtResource("6_utlk4")]
